--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 #SQL
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernaste.format_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 
